src/app/detail/styles/_detail-aside.scss
/**
 * Detail aside pane
 */

.detail-aside-pane {
    padding: 0 0 0 1.5em;

    color: #fff;
    background: $dark-grey;

    display: flex;
    flex-direction: column;
    position: relative;

    .detail-aside-group-title {
        height: 50px;
    }
}

@media (min-width: 768px) and (max-width: 1280px) {
    .detail-aside-pane {
        padding: 0 0 0 1em;
    }
    .detail-aside-group-content {
        padding-right: 1.5em;
    }
}


.detail-aside-group {
    position: relative;

    display: flex;
    overflow: hidden;
    flex-direction: column;

    transition: all .2s ease;
    @media (max-width: 767px) {
        height: 50px;
    }

    &.active {
        flex: 1 1 auto;
        @media (max-width: 768px) {
            height: auto;
        }
    }

    + .detail-aside-group {
        border-top: 1px solid rgba(#fff, .5);
    }
}

.detail-aside-group-title {
    font-size: 1.3em;
    font-weight: bold;

    display: flex;

    padding: 0 1em 0 8px;

    text-transform: uppercase;

    align-items: center;
    flex: 0 0 auto;

    @media (min-width: 768px) {
        cursor: pointer;
    }

    @media (max-width: 767px) {
        height: 50px;
    }

    .stripe-icon {
        margin-left: auto;

        transition: transform 250ms ease;
        .detail-aside-group.active & {
            transform: translate(-50%) rotate(90deg);
        }
        svg polygon {
            fill: currentColor;
        }
    }
}

.detail-aside-group-counter {
    background: rgba(0, 0, 0, 0.2);
    padding: 0.5rem 0;
    border-radius: 10%;
    /* color: black; */
    margin-left: 1rem;
    height: 2rem;
    width: 3rem;
    line-height: 1rem;
    text-align: center;
}

.detail-aside-group-content {
    margin: 0 0 0 .75em;
    padding-right: 2.25em;
    overflow: auto;
    flex: 1;
    @media (min-width: 768px) {
        height: 0;
    }
}

.detail-aside-categories-container {
    display: flex;
    flex-direction: column;
    flex: 1 1 auto;
    overflow: auto;
}

.detail-aside-categories
.detail-aside-group-content {
    overflow: hidden;
    padding-right: 1.25em;
}

.detail-aside-category-title {
    font-size: 1em;
    font-weight: bold;
    display: flex;
    padding: 0 1em 0 8px;
    text-transform: uppercase;

    @media (min-width: 768px) {
        cursor: pointer;
    }

    .stripe-icon {
        margin-left: auto;

        transition: transform 250ms ease;

        .detail-aside-categories.active & {
            transform: translate(-50%) rotate(90deg);
        }

        svg {
             width: 6px;
             height: auto;
        }

        svg polygon {
            fill: currentColor;
        }
    }

}

